# CMPUT-379

./: README.md
Assignment1/: CMakeLists.txt  Makefile  command.cpp  command.h  main.cpp  process.cpp  process.h  process_handler.cpp  process_handler.h  signal_handler.cpp  signal_handler.h  util.cpp  util.h
Assignment2/: CMakeLists.txt  Makefile  inputexample  prodcon
Assignment2/src/: command.cpp  consumer.cpp  consumer.h  main.cpp  shared_data.cpp  shared_data.h  tands.cpp  task_manager.cpp  task_manager.h
Assignment3/: CMakeLists.txt  Makefile  README
Assignment3/docs/: client.man  server.man
Assignment3/src/Client/: client.cpp  client_connection_handler.cpp  client_connection_handler.h  client_logger.cpp  client_logger.h  command.cpp  command.h
Assignment3/src/Common/: common.h  tands.h  util.cpp  util.h
Assignment3/src/Server/: fd_array_handler.cpp  fd_array_handler.h  server.cpp  server_connection_handler.cpp  server_connection_handler.h  server_logger.cpp  server_logger.h  transaction_handler.cpp  transaction_handler.h
